z-index fix

--- a/css/components/comments.css
+++ b/css/components/comments.css
@@ -52,6 +52,7 @@
 }
 
 .comment__photo img {
+  z-index: 10;
   position: absolute;
 }
 
